--- a/grafcet2.sty
+++ b/grafcet2.sty
@@ -19,6 +19,7 @@
 %     # float                                                                  %
 %     # ifthen                                                                 %
 %     # hhline                                                                 %
+%     # tikz                                                                   %
 % ---------------------------------------------------------------------------- %
 % The syntax of commands:                                                      %
 %                                                                              %
@@ -28,7 +29,7 @@
 %         proceed execution.                                                   %
 %                                                                              %
 %     \Step{text}                                                              %
-%         Step block represent the square, executing command.                  %
+%         Step block represents the square, executing command.                 %
 %                                                                              %
 %     \FirstStep{text}                                                         %
 %         The same as \Step, drawn with a double line, used for the first step %
@@ -37,6 +38,11 @@
 %     \MacroStep{text}                                                         %
 %         The same as \Step, drawn with extra lines at a top and a bottom of   %
 %         the block.                                                           %
+%                                                                              %
+%     \Jump{text}                                                              %
+%         Jump block represents unconditional jump to another step in the      %
+%         code. It's somehow equivalent to GOTO command in different           %
+%         languages. The jump point has to be described in the text block.     %
 %                                                                              %
 %     \Divergence{...}{...}                                                    %
 %         Divergence block is used to represent "OR" conditions. Creates       %
